# ManualSchoolTimetable

./: .gitignore  INSTALL.md  LICENSE  README.md  config.json  database.py  main.py  models.py  patch_app.py  pyproject.toml  scheduler.py  schemas.py
static/: app.js  index.html  style.css
tests/: test_scheduler.py
