[project]
name = "stc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
